[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsai"
version = "0.0.1"
authors = [
  { name="Luca Visentin", email="luca.visentin@unito.it" },
]
description = "A tiny tree implementation, oriented for data storage"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MrHedmad/bonsai"
"Bug Tracker" = "https://github.com/MrHedmad/bonsai/issues"
